[project]
name = "language-tutor-agent-infra"
version = "0.1.0"
description = "Pulumi infrastructure for Language Tutor Agent on AWS Lambda"
requires-python = ">=3.10"
dependencies = [
    "pulumi>=3.216.0",
    "pulumi-aws>=7.16.0",
    "pulumi-awsx>=3.1.0",
    "boto3>=1.42.0",
]

[tool.uv]
package = false
